# doxygen-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: rustdoc.yml  test.yml
assets/tests/: ctru-sys-bindings.rs  example-bindgen.rs
benches/: transforming-benchmark.rs
docs/: architecture.md
doxygen_rs/: all.html  fn.transform.html  fn.transform_bindgen.html  index.html  sidebar-items.js
doxygen_rs/ast/: enum.Direction.html  fn.generate_ast.html  index.html  sidebar-items.js  struct.Deprecated.html  struct.Param.html  struct.ParsedDoxygen.html
doxygen_rs/generator/: fn.generate_rustdoc.html  fn.rustdoc.html  index.html  sidebar-items.js
doxygen_rs/parser/: enum.StringType.html  enum.Value.html  fn.parse_bindgen.html  fn.parse_comment.html  index.html  sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.TryFrom.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  (+2 more)
src/: emojis.rs  generator.rs  lexer.rs  lib.rs  parser.rs  utils.rs
src/ast/: mod.rs  unsupported.rs
src/doxygen_rs/: emojis.rs.html  generator.rs.html  lexer.rs.html  lib.rs.html  parser.rs.html  utils.rs.html
src/generator/: mod.rs
src/parser/: clickable.rs  mod.rs  preprocessor.rs  unsupported.rs
src/transformer/: mod.rs
(+8 files in other folders)
