[package]
name = "doxygen-rs"
description = "Transform Doxygen to Rustdoc"
homepage = "https://github.com/Techie-Pi/doxygen-rs/"
repository = "https://github.com/Techie-Pi/doxygen-rs/"
keywords = ["bindgen", "doxygen", "rustdoc"]
readme = "README.md"
license = "BSD-3-Clause"
version = "0.2.2"
edition = "2021"
exclude = [
    "docs/*",
]

[dependencies]
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "transforming-benchmark"
harness = false